samples/_failures_safe/1761520591_5eb8dd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_89641ea5.c: In function ‘main’:
./samples/SAFE/__tmp_89641ea5.c:153:28: error: missing terminating " character
  153 |                     printf("Error: Cannot add matrices - dimension
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_89641ea5.c:153:21: error: expected expression at end of input
  153 |                     printf("Error: Cannot add matrices - dimension
      |                     ^~~~~~
./samples/SAFE/__tmp_89641ea5.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89641ea5.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89641ea5.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_89641ea5.c:153:21: error: expected declaration or statement at end of input
